--- a/views/commandcenter/index.html
+++ b/views/commandcenter/index.html
@@ -78,13 +78,13 @@
     </div>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
-<script src="js/lib/angular/angular.js"></script>
+<script src="js/command-center/libs/bootstrap.min.js"></script>
+<script src="js/command-center/libs/angular/angular.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/app.js"></script>
-<script src="js/services.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/filters.js"></script>
-<script src="js/directives.js"></script>
+<script src="js/command-center/app.js"></script>
+<script src="js/command-center/services/services.js"></script>
+<script src="js/command-center/controllers/controllers.js"></script>
+<script src="js/command-center/services/filters.js"></script>
+<script src="js/command-center/directives/directives.js"></script>
 </body>
 </html>
