--- a/public/css/client/client.css
+++ b/public/css/client/client.css
@@ -6,6 +6,7 @@ body {
 .input_container{
     position: fixed;
     height: 40pt;
+    padding-top: 10pt;
     width: 100%;
     bottom: 0;
     background-color: #efefef;
@@ -13,8 +14,7 @@ body {
 
 .input_container .message_text, .input_container .send_button {
     height: 30pt;
-    padding: 5pt;
-    margin: 5pt;
+    padding-left: 5pt;
     border-radius: 5pt;
     border: 1px solid lightgray;
     display: inline-block;
@@ -25,12 +25,12 @@ body {
 
 .input_container .message_text {
     width: 100%;
-    margin-right: 40pt;
-}
+    }
 
 .input_container .send_button {
     width: 40pt;
     margin-left: -40pt;
+    cursor: pointer;
 }
 
 
