--- a/views/commandcenter/index.html
+++ b/views/commandcenter/index.html
@@ -25,7 +25,7 @@
                     <li class="active"><a href="./index.html">Home</a></li>
                 </ul>
                 <ul class="nav pull-right">
-                    <li><a data-toggle="modal" href="#changeNameModal">Change my name</a></li>
+                    <!-- <li><a data-toggle="modal" href="#changeNameModal">Change my name</a></li> -->
                     <li><a data-toggle="modal" href="#infoModal">About</a></li>
                 </ul>
             </div>
