--- a/views/client/index.html
+++ b/views/client/index.html
@@ -19,7 +19,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/client/client.js"></script>
 <script>
-    var socket = io.connect();
+    var socket = io.connect('/chat1');
     var $chatBox = $('.chat_box');
     var $messageText = $('.message_text');
 
