--- a/views/client/index.html
+++ b/views/client/index.html
@@ -11,8 +11,8 @@
 </div>
 <div class="input_container">
     <form action="">
-        <input type="text" class="message_text" name="messageText"/>
         <button class="send_button">-></button>
+        <div class="message_text_wrap"><input type="text" class="message_text" name="messageText"/></div>
     </form>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
